Gabriel/ArduinoDSLParser.jj
// ArduinoDSL.jj - JavaCC grammar that parses a small Portuguese DSL for Arduino
// Commands supported: "acender pino N", "apagar pino N", "esperar N segundos"

options {
  STATIC = false;
  JAVA_UNICODE_ESCAPE = true;
}

PARSER_BEGIN(ArduinoDSLParser)
import java.util.*;
import java.io.*;

public class ArduinoDSLParser {
    // collected pins to configure in setup()
    private Set pins = new LinkedHashSet();
    // commands that will go into loop()
    private StringBuilder loopCode = new StringBuilder();

    public static void main(String[] args) throws Exception {
        InputStream in = System.in;
        if (args.length > 0) in = new FileInputStream(args[0]);
        // Use the JavaCC-generated constructors (do not declare constructors with the same signatures here)
        ArduinoDSLParser parser = new ArduinoDSLParser(new java.io.InputStreamReader(in));
        parser.Program();
        parser.emitArduinoSketch();
    }

    // NOTE: Do NOT declare a constructor that accepts Reader/InputStream here.
    // JavaCC generates constructors with those signatures and declaring them manually
    // causes "constructor ... is already defined" compile errors.

    private void emitArduinoSketch() {
        StringBuilder sb = new StringBuilder();
        sb.append("// Código gerado pela DSL Arduino (português)");
        sb.append("#include <Arduino.h>");
        sb.append("void setup() {");
        for (Object pObj : pins) {
            int p = (pObj instanceof Integer) ? ((Integer)pObj).intValue() : Integer.parseInt(pObj.toString());
            sb.append("  pinMode("+p+", OUTPUT);");
        }
        sb.append("}");
        sb.append("void loop() {");
        sb.append(loopCode.toString());
        sb.append("  // repetir com pequeno atraso");
        sb.append("  delay(100);");
        sb.append("}");

        System.out.println(sb.toString());
    }
}
PARSER_END(ArduinoDSLParser)

// -------------------- Tokens --------------------

TOKEN : {
    < ACENDER: ("acender") >
  | < APAGAR:  ("apagar")  >
  | < ESPERAR: ("esperar") >
  | < PINO:    ("pino")    >
  | < SEGUNDOS: ("segundos") >
  | < NUMBER: ( ["0"-"9"] ) ( ["0"-"9"] )* >
  | < SEMI: ";" >
}

SKIP : {
    " " | "\t" | "\r" | "\n"  // whitespace
}

// -------------------- Grammar productions --------------------

void Program() : {} {
    ( Command() )* <EOF>
}

void Command() : {} {
    ( AcenderCmd() | ApagarCmd() | EsperarCmd() )
}

void AcenderCmd() : { Token t; } {
    <ACENDER> <PINO> t = <NUMBER> [ <SEMI> ] {
        int pin = Integer.parseInt(t.image);
        pins.add(pin);
        loopCode.append("  digitalWrite("+pin+", HIGH);\n");
    }
}

void ApagarCmd() : { Token t; } {
    <APAGAR> <PINO> t = <NUMBER> [ <SEMI> ] {
        int pin = Integer.parseInt(t.image);
        pins.add(pin);
        loopCode.append("  digitalWrite("+pin+", LOW);\n");
    }
}

void EsperarCmd() : { Token t; } {
    <ESPERAR> t = <NUMBER> <SEGUNDOS> [ <SEMI> ] {
        int secs = Integer.parseInt(t.image);
        // delay expects milliseconds
        loopCode.append("  delay(" + (secs*1000) + ");\n");
    }
}

// optional: allow comments starting with // until end of line

TOKEN : {
    < LINE_COMMENT: "//" (~["\n","\r"]) * >
}

SKIP : {
    < LINE_COMMENT >
}

/*
Usage:
1) Generate parser with JavaCC: javacc ArduinoDSL.jj
2) Compile generated Java files: javac *.java
3) Run the parser on an input file: java ArduinoDSLParser exemplo.dsl

Example input (exemplo.dsl):
acender pino 13
esperar 2 segundos
apagar pino 13

The parser prints the generated Arduino sketch to stdout.
*/
