src/T2/ArduinoDSLParser.java
/* Generated By:JavaCC: Do not edit this line. ArduinoDSLParser.java */
import java.util.*;
import java.io.*;

public class ArduinoDSLParser implements ArduinoDSLParserConstants {
    // collected pins to configure in setup()
    private Set pins = new LinkedHashSet();
    // commands that will go into loop()
    private StringBuilder loopCode = new StringBuilder();

    public static void main(String[] args) throws Exception {
        InputStream in = System.in;
        if (args.length > 0) in = new FileInputStream(args[0]);
        // Use the JavaCC-generated constructors (do not declare constructors with the same signatures here)
        ArduinoDSLParser parser = new ArduinoDSLParser(new java.io.InputStreamReader(in));
        parser.Program();
        parser.emitArduinoSketch();
    }

    // NOTE: Do NOT declare a constructor that accepts Reader/InputStream here.
    // JavaCC generates constructors with those signatures and declaring them manually
    // causes "constructor ... is already defined" compile errors.

    private void emitArduinoSketch() {
        StringBuilder sb = new StringBuilder();
        sb.append("// C\u00f3digo gerado pela DSL Arduino (portugu\u00eas)");
        sb.append("#include <Arduino.h>");
        sb.append("void setup() {");
        for (Object pObj : pins) {
            int p = (pObj instanceof Integer) ? ((Integer)pObj).intValue() : Integer.parseInt(pObj.toString());
            sb.append("  pinMode("+p+", OUTPUT);");
        }
        sb.append("}");
        sb.append("void loop() {");
        sb.append(loopCode.toString());
        sb.append("  // repetir com pequeno atraso");
        sb.append("  delay(100);");
        sb.append("}");

        System.out.println(sb.toString());
    }

// -------------------- Grammar productions --------------------
  final public void Program() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ACENDER:
      case APAGAR:
      case ESPERAR:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Command();
    }
    jj_consume_token(0);
  }

  final public void Command() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ACENDER:
      AcenderCmd();
      break;
    case APAGAR:
      ApagarCmd();
      break;
    case ESPERAR:
      EsperarCmd();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void AcenderCmd() throws ParseException {
                      Token t;
    jj_consume_token(ACENDER);
    jj_consume_token(PINO);
    t = jj_consume_token(NUMBER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMI:
      jj_consume_token(SEMI);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
        int pin = Integer.parseInt(t.image);
        pins.add(pin);
        loopCode.append("  digitalWrite("+pin+", HIGH);\n");
  }

  final public void ApagarCmd() throws ParseException {
                     Token t;
    jj_consume_token(APAGAR);
    jj_consume_token(PINO);
    t = jj_consume_token(NUMBER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMI:
      jj_consume_token(SEMI);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
        int pin = Integer.parseInt(t.image);
        pins.add(pin);
        loopCode.append("  digitalWrite("+pin+", LOW);\n");
  }

  final public void EsperarCmd() throws ParseException {
                      Token t;
    jj_consume_token(ESPERAR);
    t = jj_consume_token(NUMBER);
    jj_consume_token(SEGUNDOS);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMI:
      jj_consume_token(SEMI);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
        int secs = Integer.parseInt(t.image);
        // delay expects milliseconds
        loopCode.append("  delay(" + (secs*1000) + ");\n");
  }

  /** Generated Token Manager. */
  public ArduinoDSLParserTokenManager token_source;
  JavaCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[5];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xe,0xe,0x80,0x80,0x80,};
   }

  /** Constructor with InputStream. */
  public ArduinoDSLParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ArduinoDSLParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new JavaCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ArduinoDSLParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public ArduinoDSLParser(java.io.Reader stream) {
    jj_input_stream = new JavaCharStream(stream, 1, 1);
    token_source = new ArduinoDSLParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public ArduinoDSLParser(ArduinoDSLParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ArduinoDSLParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List jj_expentries = new java.util.ArrayList();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[13];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 5; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 13; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
